added sql operations to MainActivity to insert dummy records, query them and show them on the console created a string resource for the dummy text shown on MainActivity screen and changed the value

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Habit Tracker App</string>
+    <string name="text_view">Habit Tracker</string>
 </resources>
